--- a/OpenCV_Swift/Storyboard+Xib/Base.lproj/Main.storyboard
+++ b/OpenCV_Swift/Storyboard+Xib/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RyW-g9-ujZ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -49,6 +49,17 @@
                                                     <constraint firstAttribute="height" constant="162" id="whB-Cb-HBp"/>
                                                 </constraints>
                                             </pickerView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C7W-5a-kZJ">
+                                                <rect key="frame" x="306" y="52" width="100" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="NOU-Y6-0Hc"/>
+                                                    <constraint firstAttribute="height" constant="30" id="NU6-FT-nwG"/>
+                                                </constraints>
+                                                <state key="normal" title="カメラ起動"/>
+                                                <connections>
+                                                    <action selector="cameraAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1VK-az-JI6"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -56,9 +67,11 @@
                                             <constraint firstItem="DV0-vn-elw" firstAttribute="centerX" secondItem="kBr-TF-eZi" secondAttribute="centerX" id="4H4-yT-KPM"/>
                                             <constraint firstItem="DV0-vn-elw" firstAttribute="top" secondItem="b1Y-1h-JnX" secondAttribute="bottom" constant="55" id="KcS-51-2mu"/>
                                             <constraint firstItem="a9l-Eq-Bvf" firstAttribute="top" secondItem="DV0-vn-elw" secondAttribute="bottom" constant="80" id="O5I-q4-dSn"/>
+                                            <constraint firstAttribute="trailing" secondItem="C7W-5a-kZJ" secondAttribute="trailing" constant="8" id="QPq-S0-bNX"/>
                                             <constraint firstItem="b1Y-1h-JnX" firstAttribute="top" secondItem="kBr-TF-eZi" secondAttribute="top" constant="93" id="nku-rV-GrK"/>
                                             <constraint firstItem="b1Y-1h-JnX" firstAttribute="centerX" secondItem="kBr-TF-eZi" secondAttribute="centerX" id="urY-Xf-tXc"/>
                                             <constraint firstAttribute="height" constant="896" id="xoC-N1-Oej"/>
+                                            <constraint firstItem="C7W-5a-kZJ" firstAttribute="top" secondItem="kBr-TF-eZi" secondAttribute="top" constant="52" id="ywA-3G-c6K"/>
                                             <constraint firstItem="a9l-Eq-Bvf" firstAttribute="centerX" secondItem="kBr-TF-eZi" secondAttribute="centerX" id="zZe-qy-zJ7"/>
                                         </constraints>
                                     </view>
@@ -83,6 +96,7 @@
                             <constraint firstItem="7qO-K7-LRf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="vRo-pw-TOL"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ngO-y9-hgo"/>
                     <connections>
                         <outlet property="grayScaleImage" destination="DV0-vn-elw" id="y9U-g2-uKJ"/>
                         <outlet property="pickerView" destination="a9l-Eq-Bvf" id="zNT-Jf-wPf"/>
@@ -90,6 +104,24 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="989.85507246376824" y="67.633928571428569"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JT1-BW-TFp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RyW-g9-ujZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7JK-tw-LAB">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Jel-oK-VFV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Psl-wv-v6I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="79.710144927536234" y="67.633928571428569"/>
         </scene>
