--- a/OpenCV_Swift/Storyboard+Xib/CameraViewController.xib
+++ b/OpenCV_Swift/Storyboard+Xib/CameraViewController.xib
@@ -33,6 +33,17 @@
                         <action selector="stopBtn:" destination="-1" eventType="touchUpInside" id="DKo-0y-0QO"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Vo-jP-hUU">
+                    <rect key="frame" x="20" y="822" width="100" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="5oS-Ev-Jpp"/>
+                        <constraint firstAttribute="height" constant="40" id="wUl-pq-TCg"/>
+                    </constraints>
+                    <state key="normal" title="フィルター"/>
+                    <connections>
+                        <action selector="filterBtn:" destination="-1" eventType="touchUpInside" id="cX0-tW-4GP"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -41,6 +52,8 @@
                 <constraint firstItem="WjN-44-rKx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="H4b-K8-nYE"/>
                 <constraint firstItem="WjN-44-rKx" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="YSc-MT-xh7"/>
                 <constraint firstItem="M2q-T8-NKj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jsq-Cw-c1g"/>
+                <constraint firstItem="6Vo-jP-hUU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="ono-cu-Dfl"/>
+                <constraint firstItem="6Vo-jP-hUU" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="vuD-Lc-0qQ"/>
                 <constraint firstItem="WjN-44-rKx" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="wRU-qe-tqe"/>
                 <constraint firstItem="M2q-T8-NKj" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="zhr-a1-IT2"/>
             </constraints>
